baculum: Add os, version properties and overview parameter to clients endpoint
